# hurst-aware-partitioning

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  conftest.py  pyproject.toml  replicate.py
experiments/: README.md  d3-pilot-results.json  query-library-v1.json  query-library-v1.json.sha256  trigger-exploration-2026-05.json  trigger-exploration-2026-05.py
prereg/: h2-prereg-v1.1-amendment-1.md  h2-prereg-v1.2-amendment-2.md  h2-prereg-v1.md
research/paper/: outline.md  protocol-report-2026-05.tex
src/hurst_partitioning/: __init__.py  baselines.py  benchmark.py  estimators.py  io.py  partitioner.py
tests/: test_smoke.py
